Contact button leads to footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#guest">Be a Guest</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#footer">Contact</a></li>
                 <li><a href="#subscribe" class="subscribe-btn">Subscribe</a></li>
             </ul>
         </div>
@@ -213,7 +213,7 @@
 
 
     <!-- Footer -->
-    <footer class="footer">
+    <footer id="footer" class="footer">
         <div class="footer-content">
             <div class="footer-section">
                 <h4>Young and Hungry</h4>
