--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="js/flippable-cards.js"></script>
+    <script src="js/form-confirm.js"></script>
 </body>
 </html>
