Add source links to statistics in stat cards and enhance styling with decorative arrow

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     </div>
                     <div class="stat-card-back">
                         <p>69% of high school students reported using ChatGPT to help with school assignments and homework in May 2025.</p>
+                        <div class="source">Source: <a href="https://newsroom.collegeboard.org/new-research-majority-high-school-students-use-generative-ai-schoolwork" target="_blank" rel="noopener">College Board</a></div>
                     </div>
                 </div>
             </div>
@@ -59,6 +60,7 @@
                     </div>
                     <div class="stat-card-back">
                         <p>Students are on the fence: 50% neither agree nor disagree that the benefits of using AI are greater than the risks, one-quarter agree, and one-quarter disagree. Among parents of high school students, nearly 6 in 10 agree it's better for students to use GenAI for schoolwork than not to use it.</p>
+                        <div class="source">Source: <a href="https://newsroom.collegeboard.org/new-research-majority-high-school-students-use-generative-ai-schoolwork" target="_blank" rel="noopener">College Board</a></div>
                     </div>
                 </div>
             </div>
@@ -71,6 +73,7 @@
                     </div>
                     <div class="stat-card-back">
                         <p>More than 85% of school administrators view students' learning to use AI tools as part of their high school education as very or somewhat valuable.</p>
+                        <div class="source">Source: <a href="https://newsroom.collegeboard.org/new-research-majority-high-school-students-use-generative-ai-schoolwork" target="_blank" rel="noopener">College Board</a></div>
                     </div>
                 </div>
             </div>
@@ -83,6 +86,7 @@
                     </div>
                     <div class="stat-card-back">
                         <p>Parents and teens differed in their reported use of and response to generative AI. Just one in four parents reported using generative AI tools like ChatGPT. This creates an education gap.</p>
+                        <div class="source">Source: <a href="https://blog.csba.org/ai-use-survey/" target="_blank" rel="noopener">CSBA Blog</a></div>
                     </div>
                 </div>
             </div>
@@ -95,6 +99,7 @@
                     </div>
                     <div class="stat-card-back">
                         <p>Skills in artificial intelligence are appearing in more job descriptions than ever. Job postings requiring AI skills jumped 73% from 2023 to 2024 and surged another 109% from 2024 to 2025. The number jumped 13% from June to July 2025 alone.</p>
+                        <div class="source">Source: <a href="https://www.edx.org/resources/demand-for-ai-skills" target="_blank" rel="noopener">edX</a></div>
                     </div>
                 </div>
             </div>
@@ -107,6 +112,7 @@
                     </div>
                     <div class="stat-card-back">
                         <p>A recent McKinsey study found that 78% of organizations use AI in at least one business function, up from just 50% in 2022, making these skills essential for staying competitive.</p>
+                        <div class="source">Source: <a href="https://www.edx.org/resources/demand-for-ai-skills" target="_blank" rel="noopener">edX</a></div>
                     </div>
                 </div>
             </div>
