Replace feature icons with images for enhanced visual representation in the podcast features section

--- a/index.html
+++ b/index.html
@@ -137,31 +137,31 @@
         <h2>Why Tune Into Our Podcast?</h2>
         <div class="features-grid">
             <div class="feature-card">
-                <div class="feature-icon">👥</div>
+                <div class="feature-icon"><img src="images/arm.png" alt="Empowers Students" style="height:72px;width:auto;"></div>
                 <h3>Empowers Students</h3>
                 <p>Empowers the next generation to think critically and shape society.</p>
             </div>
 
             <div class="feature-card">
-                <div class="feature-icon">🎯</div>
+                <div class="feature-icon"><img src="images/clipboard.png" alt="Preparing for the Future" style="height:72px;width:auto;"></div>
                 <h3>Preparing for the Future</h3>
                 <p>The podcast helps prepare students for college, career, and life.</p>
             </div>
 
             <div class="feature-card">
-                <div class="feature-icon">🎙️</div>
+                <div class="feature-icon"><img src="images/brain.png" alt="A Focus On Mindset" style="height:72px;width:auto;"></div>
                 <h3>A Focus On Mindset</h3>
                 <p>Listeners will need to think, and reflect on how they learn.</p>
             </div>
 
             <div class="feature-card">
-                <div class="feature-icon">🌉</div>
+                <div class="feature-icon"><img src="images/bridge.png" alt="Bridging Generations" style="height:72px;width:auto;"></div>
                 <h3>Bridging Generations</h3>
                 <p>Real stories that connect the dots between past, present, and future.</p>
             </div>
 
             <div class="feature-card">
-                <div class="feature-icon">✅</div>
+                <div class="feature-icon"><img src="images/check.png" alt="A Creative Nest" style="height:72px;width:auto;"></div>
                 <h3>A Creative Nest</h3>
                 <p>My Podcast is aimed to be a safe space for students to share ideas.</p>
             </div>
