Update subscription link and change button to anchor for improved navigation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#features">Features</a></li>
                 <li><a href="#guest">Be a Guest</a></li>
                 <li><a href="#footer">Contact</a></li>
-                <li><a href="#subscribe" class="subscribe-btn">Subscribe</a></li>
+                <li><a href="#contact" class="subscribe-btn">Subscribe</a></li>
             </ul>
         </div>
     </nav>
@@ -30,7 +30,7 @@
             <p>Built for the Next Generation of Thinkers</p>
             <div class="hero-buttons">
                 <button class="btn btn-primary">Start Listening</button>
-                <button class="btn btn-secondary">Learn More</button>
+                <a href="#statistics" class="btn btn-secondary">Learn More</a>
             </div>
         </div>
     </section>
