Update hero section styles and replace podcast image for improved aesthetics

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <h2>What is the Young and Hungry Podcast?</h2>
         <div class="about-container">
             <div class="about-image">
-                <img src="images/podcast-about.jpg" alt="Young and Hungry Podcast">
+                <img src="images/Podcast_img.png" alt="Young and Hungry Podcast">
             </div>
             <div class="about-content">
                 <p>The Young and Hungry podcast was created for students that turns classroom topics into captivating conversations. We explore how technology and learning shape the future. It gives high school students a space to think out loud, ask meaningful questions, and learn from people with different perspectives. We believe in podcasts as a vessel for growth, not a shortcut.</p>
