--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">Young and Hungry</div>
+            <div class="logo-group">
+                <img src="images/YnHLogo.png" alt="Young and Hungry Logo" class="logo-img">
+                <span class="logo-text">Young and Hungry</span>
+            </div>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#statistics">Statistics</a></li>
