Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
                 <h4>Young and Hungry</h4>
                 <p>Built for the Next Generation of Thinkers</p>
                 <div class="social-links">
-                    <a href="#" class="social-icon">📷</a>
-                    <a href="#" class="social-icon">📱</a>
-                    <a href="#" class="social-icon">𝕏</a>
+                    <a href="https://www.instagram.com/youngandhungryk_12/?hl=en" class="social-icon" target="_blank" rel="noopener"><img src="images/instagram.png" alt="Instagram" style="height:32px;width:32px;border-radius:7px;"></a>
+                    <a href="https://www.tiktok.com/@youngandhungryk_12?lang=en" class="social-icon" target="_blank" rel="noopener"><img src="images/tiktok.png" alt="TikTok" style="height:32px;width:32px;border-radius:7px;"></a>
+                    <a href="https://x.com/yandhshow" class="social-icon" target="_blank" rel="noopener"><img src="images/x.png" alt="X" style="height:32px;width:32px;border-radius:7px;"></a>
                 </div>
             </div>
             <div class="footer-section">
