Update font styles to use 'Jua' for improved branding and readability

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Young and Hungry Podcast</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Google Fonts: Jua -->
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
