Add highschoolers image to hero section and style for improved visual appeal

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <a href="#statistics" class="btn btn-secondary">Learn More</a>
             </div>
         </div>
+        <img src="images/highschoolers.png" alt="Highschoolers" class="hero-highschoolers">
     </section>
 
     <!-- Why AI Education Matters Section -->
